# tulip-tg-bot

./: .git-blame-ignore-revs  .gitignore  LICENSE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5d08365ee720_create_user_and_chats.py
src/tulip_tg_bot/: __init__.py
tulip/: __init__.py  __main__.py  config.py
tulip/db/: __init__.py  users.py
tulip/entities/: chat.py  chat_member.py  user.py  users.py
tulip/handlers/: admin.py  bans.py  general.py  misc.py  mute.py  users.py
tulip/utils/: chat_status.py  decorators.py  extraction.py
